--- a/dock.html
+++ b/dock.html
@@ -1,37 +1,137 @@
+<div class="dock">
+  <div class="dock-btn" onclick="loadPage('https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/home.html?t=' + Date.now())">
+    <svg viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
+    <span>Home</span>
+  </div>
+  <div class="dock-btn" onclick="loadPage('https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/games.html?t=' + Date.now())">
+<svg width="800px" height="800px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+  <title>ionicons-v5-g</title>
+  <path d="M467.51,248.83c-18.4-83.18-45.69-136.24-89.43-149.17A91.5,91.5,0,0,0,352,96c-26.89,0-48.11,16-96,16s-69.15-16-96-16a99.09,99.09,0,0,0-27.2,3.66C89,112.59,61.94,165.7,43.33,248.83c-19,84.91-15.56,152,21.58,164.88,26,9,49.25-9.61,71.27-37,25-31.2,55.79-40.8,119.82-40.8s93.62,9.6,118.66,40.8c22,27.41,46.11,45.79,71.42,37.16C487.1,399.86,486.52,334.74,467.51,248.83Z" style="fill:none;stroke:#ffffff;stroke-miterlimit:10;stroke-width:32px"/>
+  <circle cx="292" cy="224" r="20" fill="#ffffff"/>
+  <path d="M336,288a20,20,0,1,1,20-19.95A20,20,0,0,1,336,288Z" fill="#ffffff"/>
+  <circle cx="336" cy="180" r="20" fill="#ffffff"/>
+  <circle cx="380" cy="224" r="20" fill="#ffffff"/>
+  <line x1="160" y1="176" x2="160" y2="272" style="fill:none;stroke:#ffffff;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/>
+  <line x1="208" y1="224" x2="112" y2="224" style="fill:none;stroke:#ffffff;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/>
+</svg>
+    <span>Games</span>
+  </div>
+  <div class="dock-btn" onclick="loadPage('https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/pc-games.html?t=' + Date.now())">
+<svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <path d="M12 17V21M8 21H16M6.2 17H17.8C18.9201 17 19.4802 17 19.908 16.782C20.2843 16.5903 20.5903 16.2843 20.782 15.908C21 15.4802 21 14.9201 21 13.8V6.2C21 5.0799 21 4.51984 20.782 4.09202C20.5903 3.71569 20.2843 3.40973 19.908 3.21799C19.4802 3 18.9201 3 17.8 3H6.2C5.0799 3 4.51984 3 4.09202 3.21799C3.71569 3.40973 3.40973 3.71569 3.21799 4.09202C3 4.51984 3 5.07989 3 6.2V13.8C3 14.9201 3 15.4802 3.21799 15.908C3.40973 16.2843 3.71569 16.5903 4.09202 16.782C4.51984 17 5.07989 17 6.2 17Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
+</svg>
+    <span>PC Games</span>
+  </div>
+  <div class="dock-btn" onclick="loadPage('https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/unbl0ck.html?t=' + Date.now())">
+<svg fill="#ffffff" width="800px" height="800px" version="1.1" viewBox="144 144 512 512" xmlns="http://www.w3.org/2000/svg">
+ <g>
+  <path d="m602.61 257.65c0-17.781-14.52-32.305-32.379-32.305l-340.44 0.003906c-17.855 0-32.379 14.523-32.379 32.305v247.39h405.2zm-371.63 13.82c0-6.9648 5.668-12.625 12.625-12.625h312.87c6.9648 0 12.633 5.6602 12.633 12.625v41.867c0 1.543-1.2461 2.7773-2.7773 2.7773h-332.57c-1.5352 0-2.7773-1.2383-2.7773-2.7773zm338.14 200.08c0 6.9648-5.7031 12.594-12.672 12.594h-312.88c-6.9648 0-12.594-5.6289-12.594-12.594v-150.4c0.89063 0.37109 1.8516 0.51953 2.8164 0.51953h332.52c0.96484 0 1.9258-0.14844 2.8164-0.51953z"/>
+  <path d="m636.93 517.14c-2.6523-4.125-7.1406-6.5859-12.016-6.5859h-449.8c-4.8672 0-9.3633 2.4609-12.016 6.5859-2.6445 4.1055-3.0312 9.1797-1.1719 13.203l6.4375 21.707c6.2539 13.723 19.961 22.59 34.902 22.59h393.41c14.945 0 28.645-8.8672 35.035-22.953l6.3281-21.168c1.9062-4.3398 1.4922-9.3242-1.1172-13.379m-123.92 37.875c-5.8984 0-10.648-4.7422-10.648-10.648 0-5.8438 4.75-10.641 10.648-10.641 5.8438 0 10.648 4.793 10.648 10.641 0 5.9062-4.8008 10.648-10.648 10.648m35.016 0c-5.8984 0-10.648-4.7422-10.648-10.648 0-5.8438 4.75-10.641 10.648-10.641 5.8477 0 10.648 4.793 10.648 10.641 0 5.9062-4.8008 10.648-10.648 10.648m35.016 0c-5.8984 0-10.648-4.7422-10.648-10.648 0-5.8438 4.75-10.641 10.648-10.641 5.8438 0 10.645 4.793 10.645 10.641 0 5.9062-4.8008 10.648-10.645 10.648"/>
+  <path d="m264.76 298.13c5.8438 0 10.645-4.7422 10.645-10.648 0-5.8438-4.8008-10.648-10.645-10.648-5.8984 0-10.648 4.8008-10.648 10.648 0 5.9062 4.75 10.648 10.648 10.648"/>
+  <path d="m299.77 298.13c5.8438 0 10.645-4.7422 10.645-10.648 0-5.8438-4.8008-10.648-10.645-10.648-5.9062 0-10.648 4.8008-10.648 10.648 0 5.9062 4.7422 10.648 10.648 10.648"/>
+  <path d="m334.79 298.13c5.8438 0 10.645-4.7422 10.645-10.648 0-5.8438-4.8008-10.648-10.645-10.648-5.8984 0-10.648 4.8008-10.648 10.648 0 5.9062 4.75 10.648 10.648 10.648"/>
+  <path d="m370.14 335.11h-116.01c-1.5352 0-2.7773 1.2461-2.7773 2.7773 0 1.5352 1.2461 2.7773 2.7773 2.7773h116.01c1.5312 0 2.7773-1.2461 2.7773-2.7773s-1.2461-2.7773-2.7773-2.7773"/>
+  <path d="m370.14 363.87h-116.01c-1.5352 0-2.7773 1.2461-2.7773 2.7773 0 1.5352 1.2461 2.7773 2.7773 2.7773h116.01c1.5312 0 2.7773-1.2461 2.7773-2.7773s-1.2461-2.7773-2.7773-2.7773"/>
+  <path d="m370.14 392.63h-116.01c-1.5352 0-2.7773 1.2461-2.7773 2.7773 0 1.5352 1.2461 2.7773 2.7773 2.7773h116.01c1.5312 0 2.7773-1.2461 2.7773-2.7773s-1.2461-2.7773-2.7773-2.7773"/>
+  <path d="m370.14 421.39h-116.01c-1.5352 0-2.7773 1.2461-2.7773 2.7773 0 1.5352 1.2461 2.7773 2.7773 2.7773h116.01c1.5312 0 2.7773-1.2461 2.7773-2.7773s-1.2461-2.7773-2.7773-2.7773"/>
+  <path d="m370.14 450.15h-116.01c-1.5352 0-2.7773 1.2461-2.7773 2.7773 0 1.5352 1.2461 2.7773 2.7773 2.7773h116.01c1.5312 0 2.7773-1.2461 2.7773-2.7773 0-1.5352-1.2461-2.7773-2.7773-2.7773"/>
+  <path d="m460.44 343.89c-28.977 0-52.531 23.566-52.531 52.609 0 28.969 23.555 52.523 52.531 52.523 29.035 0 52.602-23.555 52.602-52.523 0-29.043-23.566-52.609-52.602-52.609m23.922 72.535c1.082 1.082 1.082 2.8438 0 3.9258-0.54297 0.54688-1.2539 0.81641-1.9648 0.81641-0.71094 0-1.4219-0.26562-1.9648-0.81641l-19.969-19.969-19.961 19.969c-0.53906 0.54688-1.25 0.81641-1.9648 0.81641-0.71094 0-1.4219-0.26562-1.9648-0.81641-1.0898-1.082-1.0898-2.8438 0-3.9258l19.961-19.969-19.961-19.961c-1.0898-1.0898-1.0898-2.8438 0-3.9258 1.082-1.0898 2.8438-1.0898 3.9258 0l19.961 19.961 19.969-19.961c1.082-1.0898 2.8438-1.0898 3.9258 0 1.082 1.082 1.082 2.8359 0 3.9258l-19.961 19.961z"/>
+ </g>
+</svg>
+    <span>Unblockers</span>
+  </div>
+  <div class="dock-btn" onclick="loadPage('https://bazinga.great-site.net/recommend.php?t=' + Date.now())">
+<svg width="160" height="" viewBox="0 0 360 480" xmlns="http://www.w3.org/2000/svg" fill="none"><path 
+    d="M11.2691 4.41115C11.5006 3.89177 11.6164 3.63208 11.7776 3.55211C11.9176 3.48263 12.082 3.48263 12.222 3.55211C12.3832 3.63208 12.499 3.89177 12.7305 4.41115L14.5745 8.54808C14.643 8.70162 14.6772 8.77839 14.7302 8.83718C14.777 8.8892 14.8343 8.93081 14.8982 8.95929C14.9705 8.99149 15.0541 9.00031 15.2213 9.01795L19.7256 9.49336C20.2911 9.55304 20.5738 9.58288 20.6997 9.71147C20.809 9.82316 20.8598 9.97956 20.837 10.1342C20.8108 10.3122 20.5996 10.5025 20.1772 10.8832L16.8125 13.9154C16.6877 14.0279 16.6252 14.0842 16.5857 14.1527C16.5507 14.2134 16.5288 14.2807 16.5215 14.3503C16.5132 14.429 16.5306 14.5112 16.5655 14.6757L17.5053 19.1064C17.6233 19.6627 17.6823 19.9408 17.5989 20.1002C17.5264 20.2388 17.3934 20.3354 17.2393 20.3615C17.0619 20.3915 16.8156 20.2495 16.323 19.9654L12.3995 17.7024C12.2539 17.6184 12.1811 17.5765 12.1037 17.56C12.0352 17.5455 11.9644 17.5455 11.8959 17.56C11.8185 17.5765 11.7457 17.6184 11.6001 17.7024L7.67662 19.9654C7.18404 20.2495 6.93775 20.3915 6.76034 20.3615C6.60623 20.3354 6.47319 20.2388 6.40075 20.1002C6.31736 19.9408 6.37635 19.6627 6.49434 19.1064L7.4341 14.6757C7.46898 14.5112 7.48642 14.429 7.47814 14.3503C7.47081 14.2807 7.44894 14.2134 7.41394 14.1527C7.37439 14.0842 7.31195 14.0279 7.18708 13.9154L3.82246 10.8832C3.40005 10.5025 3.18884 10.3122 3.16258 10.1342C3.13978 9.97956 3.19059 9.82316 3.29993 9.71147C3.42581 9.58288 3.70856 9.55304 4.27406 9.49336L8.77835 9.01795C8.94553 9.00031 9.02911 8.99149 9.10139 8.95929C9.16534 8.93081 9.2226 8.8892 9.26946 8.83718C9.32241 8.77839 9.35663 8.70162 9.42508 8.54808L11.2691 4.41115Z" 
+    stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+    transform="translate(63, 0) scale(10)" />
+  <g transform="translate(0, 180) scale(0.7)">
+    <path d="M467.51,248.83c-18.4-83.18-45.69-136.24-89.43-149.17A91.5,91.5,0,0,0,352,96c-26.89,0-48.11,16-96,16s-69.15-16-96-16a99.09,99.09,0,0,0-27.2,3.66C89,112.59,61.94,165.7,43.33,248.83c-19,84.91-15.56,152,21.58,164.88,26,9,49.25-9.61,71.27-37,25-31.2,55.79-40.8,119.82-40.8s93.62,9.6,118.66,40.8c22,27.41,46.11,45.79,71.42,37.16C487.1,399.86,486.52,334.74,467.51,248.83Z" style="fill:none;stroke:#ffffff;stroke-miterlimit:10;stroke-width:32px"/>
+    <circle cx="292" cy="224" r="20" fill="#ffffff"/>
+    <path d="M336,288a20,20,0,1,1,20-19.95A20,20,0,0,1,336,288Z" fill="#ffffff"/>
+    <circle cx="336" cy="180" r="20" fill="#ffffff"/>
+    <circle cx="380" cy="224" r="20" fill="#ffffff"/>
+    <line x1="160" y1="176" x2="160" y2="272" style="fill:none;stroke:#ffffff;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/>
+    <line x1="208" y1="224" x2="112" y2="224" style="fill:none;stroke:#ffffff;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/>
+  </g></svg>
+    <span>Game Recommend</span>
+  </div>
+  <div class="dock-btn" onclick="loadPage('https://bazinga.great-site.net/broken-game.php?t=' + Date.now())">
+<svg width="800px" height="800px" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" stroke-width="3" stroke="#FFFFFF" fill="none">
+  <path d="M39.75,19l-4.92-3.68,4.79-2.84L35.38,7.74H52.16V43.4L40.21,56.26H14.55V7.74H26.68l3.7,4-3.27,3.91,4.54,4-3.84,9.25a.1.1,0,0,0,.14.13Z" stroke-linecap="round" fill="none"></path>
+</svg>
+    <span>Report a broken game</span>
+  </div>
+  <div class="dock-btn" onclick="loadPage('https://bazinga.great-site.net/changelogs.php?t=' + Date.now())">
+<svg class="svg-icon" style="width: 1em;height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <path d="M469.333333 320v218.026667l200.96 119.04 33.706667-54.613334-170.666667-101.12V320m0-213.333333c-150.613333 0-281.173333 81.92-351.146666 203.52L85.333333 213.333333v277.333334h277.333334L245.333333 373.333333C296.96 265.813333 405.333333 192 533.333333 192A320 320 0 0 1 853.333333 512a320 320 0 0 1-320 320c-139.52 0-257.28-89.173333-301.226666-213.333333h-89.6c46.933333 171.946667 203.52 298.666667 390.826666 298.666666 223.573333 0 405.333333-181.333333 405.333334-405.333333a405.333333 405.333333 0 0 0-405.333334-405.333333z" fill="#FFFFFF" />
+</svg>
+    <span>Changelogs</span>
+  </div>
+</div>
+
 <style>
-#dock {
+.dock {
   position: fixed;
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(20, 20, 20, 0.9);
-  border-radius: 25px;
-  padding: 8px 16px;
+  background: rgba(20, 20, 20, 0.8);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255,255,255,0.1);
+  border-radius: 50px;
   display: flex;
-  gap: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+  justify-content: center;
+  align-items: flex-end;
+  gap: 25px;
+  padding: 15px 30px 20px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.6);
   z-index: 1000;
 }
+
 .dock-btn {
-  background: none;
-  border: none;
-  color: white;
-  font-size: 22px;
+  position: relative;
+  width: 45px;
+  height: 45px;
+  background: rgba(255,255,255,0.08);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .25s ease;
   cursor: pointer;
-  transition: transform 0.2s, color 0.2s;
 }
+
 .dock-btn:hover {
-  transform: scale(1.3);
-  color: #0af;
+  background: rgba(255,255,255,0.2);
+  transform: translateY(-8px);
+}
+
+.dock-btn svg {
+  width: 24px;
+  height: 24px;
+  fill: #fff;
+  pointer-events: none;
+}
+
+.dock-btn span {
+  position: absolute;
+  bottom: -25px;
+  left: 50%;
+  transform: translateX(-50%) translateY(10px);
+  background: rgba(20,20,20,0.9);
+  color: #fff;
+  font-size: 0.75rem;
+  padding: 3px 8px;
+  border-radius: 8px;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.25s ease;
+}
+
+.dock-btn:hover span {
+  opacity: 1;
+  transform: translateX(-50%) translateY(0);
 }
 </style>
-
-<div id="dock">
-  <button class="dock-btn" data-url="home.html" title="Home">🏠</button>
-  <button class="dock-btn" data-url="games.html" title="Games">🎮</button>
-  <button class="dock-btn" data-url="pc-games.html" title="PC Games">💻</button>
-  <button class="dock-btn" data-url="unbl0ck.html" title="Unblocked">🌐</button>
-  <button class="dock-btn" data-url="https://bazinga.great-site.net/recommend.php" title="Recommend">⭐</button>
-  <button class="dock-btn" data-url="https://bazinga.great-site.net/broken-game.php" title="Broken Game">🧩</button>
-  <button class="dock-btn" data-url="https://bazinga.great-site.net/changelogs.php" title="Changelogs">📰</button>
-</div>
