--- a/home.html
+++ b/home.html
@@ -6,120 +6,46 @@
 <title>Clever | Portal</title>
 <link rel="icon" href="https://assets.clever.com/launchpad/4cfe59076/favicon.ico" type="image/x-icon">
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
-body{
-  background:#000;
-  color:#f5f5f5;
-  min-height:100vh;
-  padding:1rem;
+body {
+  background: #000;
+  color: #f5f5f5;
+  font-family: 'Poppins', sans-serif;
+  padding: 1rem;
+  min-height: 100vh;
 }
-#version-indicator{
-  font-size:2rem;
-  color:#f5f5f5;
-  font-weight:500;
-  line-height:1;
-  margin:0;
+
+#version-indicator {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-left: 0.5rem;
 }
-.wrap{
-  max-width:1100px;
-  margin:auto;
-  display:flex;
-  flex-direction:column;
-  gap:0.25rem;
-  padding:0;
-}
-header{
-  display:flex;
-  flex-direction:column;
-  gap:0.25rem;
-}
-header div{
-  display:flex;
-  align-items:center;
-  gap:0.5rem;
-}
-header h1{
-  font-size:1.1rem;
-  color:#f5f5f5;
-  font-weight:500;
-  line-height:1;
-}
-header h3{
-  font-size:0.9rem;
-  color:#ccc;
-  font-weight:400;
-  margin:0;
-  line-height:1.2;
-}
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(200px,1fr));
-  gap:1rem;
-}
-.card{
-  background:rgba(255,255,255,.05);
-  border:1px solid rgba(255,255,255,.1);
-  border-radius:15px;
-  overflow:hidden;
-  cursor:pointer;
-  transition:transform .3s,box-shadow .3s;
-  text-decoration:none;
-  color:inherit;
-}
-.card:hover{
-  transform:translateY(-5px);
-  box-shadow:0 10px 20px rgba(0,0,0,.5);
-}
-.card img{
-  width:100%;
-  height:120px;
-  object-fit:contain;
-  display:block;
-  background:#000;
-}
-.card-content{
-  background:rgba(255,255,255,.05);
-  padding:.5rem 0.75rem;
-  text-align:center;
-  border-top:1px solid rgba(255,255,255,.1);
-}
-.card-content h2{
-  font-size:1rem;
-  font-weight:500;
-  margin:0;
-  line-height:1.2;
-  overflow:hidden;
-  text-overflow:ellipsis;
-  display:-webkit-box;
-  -webkit-line-clamp:2;
-  -webkit-box-orient:vertical;
-  color:#f5f5f5;
+
+h1.main-text {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.2;
+  margin-top: 2rem;
 }
 </style>
 </head>
 <body>
-<div class="wrap">
-  <header>
-    <div>
-      <h1 style="font-size:2rem;">Home Page | </h1>
-      <h1 id="version-indicator">Version: ...</h1>
-    </div>
-  </header>
-<br>
 
-<h1 style="font-size:2rem;color:#f5f5f5;font-weight:500;line-height:1;">
-  This is the bazinga games homepage please use the dock below to navigate
+<header style="display:flex;align-items:center;gap:0.5rem;">
+  <h1>Home Page |</h1>
+  <h1 id="version-indicator">Version: ...</h1>
+</header>
+
+<h1 class="main-text">
+  This is the Bazinga Games homepage. Please use the dock below to navigate.
 </h1>
 
 <script>
 // Fetch version directly from GitHub with timestamp (no cache)
-const ts = () => Date.now();
-fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.txt?t=${ts()}`)
+fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.txt?t=${Date.now()}`)
   .then(res => res.text())
   .then(v => document.getElementById('version-indicator').textContent = `Version: ${v.trim()}`)
   .catch(() => document.getElementById('version-indicator').textContent = 'Version: unavailable');
 </script>
 
 </body>
-
 </html>
