--- a/pc-games.html
+++ b/pc-games.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,64 +5,53 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PC Games</title>
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
-body{background:#000;color:#f5f5f5;min-height:100vh;padding:2rem;display:flex;flex-direction:column;justify-content:flex-start}
-.header{text-align:center;margin-bottom:1.5rem}
-.page-title{font-size:2.5rem;font-weight:700;background:linear-gradient(45deg,#fff,#aaa);
-  -webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:1rem}
-.search-bar{width:100%;max-width:500px;margin:0 auto 2rem;display:block;padding:.75rem 1rem;
-  border:1px solid rgba(255,255,255,.2);border-radius:25px;background:rgba(255,255,255,.05);
-  color:#fff;outline:none;font-size:1rem}
-.search-bar:focus{border-color:rgba(255,255,255,.4)}
-.games-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); grid-auto-rows: auto; /* <-- make row heights independent */ gap: 1.5rem; }
-.game-card{background:rgba(255,255,255,.05);border:1px solid rgba(255,255,255,.1);
-  border-radius:15px;overflow:hidden;cursor:pointer;transition:transform .3s,box-shadow .3s;
-  display:flex;flex-direction:column;}
-.game-card:hover{transform:translateY(-5px);box-shadow:0 10px 10px rgba(0,0,0,.5)}
-.game-image{width:100%;aspect-ratio:16/9;object-fit:contain;background:#000;display:block}
-.game-info{padding:1rem;display:flex;align-items:center;justify-content:center;flex-grow:0;}
-.game-title{font-size:clamp(1rem,2vw,1.2rem);font-weight:500;overflow:hidden;text-overflow:ellipsis;
-  display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;line-height:1.3;text-align:center}
-.no-results{display:none;text-align:center;padding:2rem;color:#888}
+* { margin:0; padding:0; box-sizing:border-box; font-family:'Poppins',sans-serif; }
+body { background:#000; color:#f5f5f5; min-height:100vh; padding:2rem; display:flex; flex-direction:column; justify-content:flex-start; }
+.header { text-align:center; margin-bottom:1.5rem; }
+.page-title { font-size:2.5rem; font-weight:700; background:linear-gradient(45deg,#fff,#aaa); -webkit-background-clip:text; -webkit-text-fill-color:transparent; margin-bottom:1rem; }
+.games-grid { display:grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 1.5rem; }
+.game-card { background:rgba(255,255,255,.05); border:1px solid rgba(255,255,255,.1); border-radius:15px; overflow:hidden; cursor:pointer; transition:transform .3s,box-shadow .3s; display:flex; flex-direction:column; }
+.game-card:hover { transform:translateY(-5px); box-shadow:0 10px 10px rgba(0,0,0,.5); }
+.game-image { width:100%; aspect-ratio:16/9; object-fit:contain; background:#000; display:block; }
+.game-info { padding:1rem; display:flex; align-items:center; justify-content:center; }
+.game-title { font-size:clamp(1rem,2vw,1.2rem); font-weight:500; overflow:hidden; text-overflow:ellipsis; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; line-height:1.3; text-align:center; }
+.no-results { display:block; text-align:center; padding:2rem; color:#888; }
 </style>
 </head>
 <body>
 
 <div class="header">
-    <h1 class="page-title">PC Games</h1>
-    <h2><a style="color:white;" href="instructions.txt?" target="_blank">Click here if your confused</a></h2>
-<!---
-  <input type="text" class="search-bar" id="searchInput" placeholder="Search PC games..."> -->
+  <h1 class="page-title">PC Games</h1>
+  <h2><a style="color:white;" href="instructions.txt" target="_blank">Click here if you're confused</a></h2>
 </div>
 
 <div class="games-grid" id="gamesGrid">
   <div class="no-results" id="noResults">Loading PC games...</div>
 </div>
-
 <script>
-// Load PC games from local JSON
-fetch('https://raw.githubusercontent.com/Calvin99Cooler/pc-games/main/pc-games.json')
+// Load PC games from JSON with timestamp to avoid caching
+const ts = Date.now();
+fetch(`https://raw.githubusercontent.com/Calvin99Cooler/pc-games/main/pc-games.json?t=${ts}`)
   .then(response => response.json())
   .then(games => {
     const grid = document.getElementById('gamesGrid');
     const noResults = document.getElementById('noResults');
-    grid.innerHTML = ''; // Clear loading text
-    grid.appendChild(noResults); // keep placeholder
+    grid.innerHTML = ''; // clear loading text
 
     if(games.length === 0){
       noResults.textContent = 'No PC games found.';
-      noResults.style.display = 'block';
+      grid.appendChild(noResults);
       return;
     }
 
     games.forEach(game => {
       const card = document.createElement('div');
       card.className = 'game-card';
-      card.onclick = () => { window.open(game.url, '_blank'); }; // open link in new tab
+      card.onclick = () => window.open(game.url, '_blank');
 
       const img = document.createElement('img');
       img.className = 'game-image';
-      img.src = game.img; // image path from JSON
+      img.src = game.img;
       img.alt = game.name;
 
       const info = document.createElement('div');
@@ -82,31 +70,11 @@ fetch('https://raw.githubusercontent.com/Calvin99Cooler/pc-games/main/pc-games.j
   .catch(err => {
     const noResults = document.getElementById('noResults');
     noResults.textContent = 'Failed to load PC games.';
-    noResults.style.display = 'block';
+    const grid = document.getElementById('gamesGrid');
+    grid.innerHTML = '';
+    grid.appendChild(noResults);
     console.error(err);
   });
-
-// Search functionality
-const searchInput = document.getElementById('searchInput');
-const noResults = document.getElementById('noResults');
-
-searchInput.addEventListener('input', function() {
-  const filter = this.value.toLowerCase();
-  const cards = document.querySelectorAll('.game-card');
-  let visible = 0;
-
-  cards.forEach(card => {
-    const title = card.querySelector('.game-title').textContent.toLowerCase();
-    if (title.includes(filter)) {
-      card.style.display = '';
-      visible++;
-    } else {
-      card.style.display = 'none';
-    }
-  });
-
-  noResults.style.display = visible === 0 ? 'block' : 'none';
-});
 </script>
 
 </body>
