--- a/games.html
+++ b/games.html
@@ -1,147 +1,129 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bazinga Games</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<div id="bazinga-games-widget"></div>
+
+<script>
+/* ==========  SINGLE-DIV LOADER  ========== */
+(() => {
+  const id  = 'bazinga-games-widget';
+  const cnt = document.getElementById(id);
+  if (!cnt) return;
+
+  cnt.innerHTML = `
 <style>
-/* --- Styles kept from your original --- */
-* { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-body { background: #000; color: #f5f5f5; min-height: 100vh; padding: 2rem; display: flex; flex-direction: column; justify-content: space-between; }
-.header { text-align: center; margin-bottom: 2rem; }
-.page-title { font-size: 2.5rem; font-weight: 700; background: linear-gradient(45deg,#fff,#aaa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 1rem; }
-.search-bar { width: 100%; max-width: 500px; margin: 0 auto 2rem; display: block; padding: .75rem 1rem; border: 1px solid rgba(255,255,255,.2); border-radius: 25px; background: rgba(255,255,255,.05); color: #fff; outline: none; font-size: 1rem; }
-.search-bar:focus { border-color: rgba(255,255,255,.4); }
-.games-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 1.5rem; flex: 1; }
-.game-card { background: rgba(255,255,255,.05); border: 1px solid rgba(255,255,255,.1); border-radius: 15px; overflow: hidden; cursor: pointer; transition: transform .3s, box-shadow .3s; display: flex; flex-direction: column; justify-content: flex-start; height: 220px; }
-.game-card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,.5); }
-.game-image { width: 100%; height: 150px; object-fit: contain; background: #000; display: block; }
-.game-info { padding: 1rem; flex: 1; }
-.game-title { font-size: 1rem; font-weight: 500; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; line-height: 1.3; }
-.no-results { text-align: center; padding: 2rem; color: #888; }
-#version-indicator { font-size: 2rem; color: #f5f5f5; font-weight: 500; text-align: center; line-height: 1; margin-bottom: 0.5rem; }
+/* ----------  scoped styles  ---------- */
+#bzg-root *{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif}
+#bzg-root{--bg:#000;--fg:#f5f5f5;--accent:rgba(255,255,255,.1);--pad:1.5rem;
+          background:var(--bg);color:var(--fg);min-height:100vh;display:flex;flex-direction:column;
+          padding:var(--pad);line-height:1.3}
+#bzg-header{text-align:center;margin-bottom:var(--pad)}
+#bzg-title{font-size:2.5rem;font-weight:700;
+           background:linear-gradient(45deg,#fff,#aaa);-webkit-background-clip:text;
+           -webkit-text-fill-color:transparent;margin-bottom:1rem}
+#bzg-version{font-size:2rem;font-weight:500;margin-bottom:.5rem}
+#bzg-search{width:100%;max-width:500px;margin:0 auto var(--pad);display:block;
+            padding:.75rem 1rem;border:1px solid rgba(255,255,255,.2);
+            border-radius:25px;background:rgba(255,255,255,.05);color:#fff;outline:0}
+#bzg-search:focus{border-color:rgba(255,255,255,.4)}
+#bzg-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(250px,1fr));gap:var(--pad);flex:1}
+.bzg-card{background:var(--accent);border:1px solid var(--accent);border-radius:15px;
+          overflow:hidden;cursor:pointer;transition:transform .3s,box-shadow .3s;height:220px;
+          display:flex;flex-direction:column}
+.bzg-card:hover{transform:translateY(-5px);box-shadow:0 10px 20px rgba(0,0,0,.5)}
+.bzg-img{width:100%;height:150px;object-fit:contain;background:#000;display:block}
+.bzg-info{padding:1rem;flex:1}
+.bzg-name{font-size:1rem;font-weight:500;overflow:hidden;text-overflow:ellipsis;
+          display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical}
+#bzg-empty{text-align:center;padding:2rem;color:#888;display:none}
 </style>
-</head>
-<body>
 
-<div id="version-indicator">Version: ...</div>
+<div id="bzg-root">
+  <div id="bzg-header">
+    <div id="bzg-version">Version: …</div>
+    <h1 id="bzg-title">Bazinga Games</h1>
+    <input id="bzg-search" type="text" placeholder="Search games…" autocomplete="off">
+  </div>
+  <div id="bzg-grid"></div>
+  <div id="bzg-empty">No games found</div>
+</div>`;
 
-<div class="header">
-<h1 class="page-title">Bazinga Games</h1>
-<input type="text" class="search-bar" id="searchInput" placeholder="Search games..." autocomplete="off">
-</div>
-
-<div class="games-grid" id="gamesGrid"></div>
-<div class="no-results" id="noResults" style="display:none">No games found</div>
-
-<script>
-// --- Version fetch ---
-(async () => {
-  const versionEl = document.getElementById('version-indicator');
-  const ts = () => Date.now();
-  try {
-    const res = await fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.txt?t=${ts()}`);
-    if (!res.ok) throw new Error('Network response not ok');
-    const v = await res.text();
-    versionEl.textContent = `Version: ${v.trim()}`;
-  } catch (err) {
-    console.warn(err);
-    versionEl.textContent = 'Version: unavailable';
-  }
-})();
-</script>
-
-<script>
-(async () => {
-  const ts = () => Date.now();
-  const JSON_URL = `https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/single-html/zones.json?t=${ts()}`;
-  const COVER_URL = 'https://raw.githubusercontent.com/Calvin99Cooler/covers/main';
-  const HTML_BASE_URL = 'https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/single-html/';
-  const FALLBACK_PROJECT_URL = 'https://raw.githubusercontent.com/Calvin99Cooler/files/main';
-
-  const grid = document.getElementById('gamesGrid');
-  const searchInput = document.getElementById('searchInput');
-  const noResults = document.getElementById('noResults');
-
-  const zones = await fetch(JSON_URL)
-    .then(r => r.json())
-    .then(list => list.map(z => {
-      let coverUrl = '';
-      if (z.cover) {
-        coverUrl = z.cover.includes('{COVER_URL}')
-          ? z.cover.replace('{COVER_URL}', COVER_URL)
-          : z.cover.startsWith('http')
-          ? z.cover
-          : `${FALLBACK_PROJECT_URL}/${encodeURIComponent(z.name.trim())}/${z.cover}`;
-      }
-      return {
-        name: z.name,
-        cover: coverUrl ? coverUrl + `?t=${ts()}` : '',
-        url: `${HTML_BASE_URL}${encodeURIComponent(z.name)}.html?t=${ts()}`
-      };
-    }))
-    .catch(() => []);
-
-  const lazyLoadImages = (rootEl) => {
-    const imgs = rootEl.querySelectorAll('img[data-src]');
-    if ('IntersectionObserver' in window) {
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            const img = entry.target;
-            img.src = img.dataset.src;
-            img.removeAttribute('data-src');
-            observer.unobserve(img);
-          }
-        });
-      });
-      imgs.forEach(img => observer.observe(img));
-    } else imgs.forEach(img => img.src = img.dataset.src);
-  };
-
-  function makeCard(zone) {
-    const card = document.createElement('div');
-    card.className = 'game-card';
-    card.innerHTML = `
-      <img data-src="${zone.cover}" alt="${zone.name}" class="game-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==">
-      <div class="game-info"><h3 class="game-title">${zone.name}</h3></div>`;
-    card.addEventListener('click', () => {
-      fetch(zone.url)
-        .then(r => r.text())
-        .then(html => {
-          const tab = window.open('about:blank', '_blank');
-          tab.document.write(html);
-          tab.document.close();
-        })
-        .catch(() => alert('Could not load game'));
-    });
-    return card;
-  }
-
-  function render(list) {
-    grid.innerHTML = '';
-    if (!list.length) {
-      noResults.style.display = 'block';
-      return;
+  /* ----------  version ---------- */
+  (async () => {
+    const el = cnt.querySelector('#bzg-version');
+    const ts = Date.now();
+    try {
+      const r = await fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.txt?t=${ts}`);
+      el.textContent = `Version: ${(await r.text()).trim()}`;
+    } catch {
+      el.textContent = 'Version: unavailable';
     }
-    noResults.style.display = 'none';
-    list.forEach(z => grid.appendChild(makeCard(z)));
-    lazyLoadImages(grid);
-  }
+  })();
 
-  render(zones);
+  /* ----------  games ---------- */
+  (async () => {
+    const ts = () => Date.now();
+    const JSON_URL = `https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/single-html/zones.json?t=${ts()}`;
+    const COVER_URL = 'https://raw.githubusercontent.com/Calvin99Cooler/covers/main';
+    const HTML_URL = 'https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/single-html/';
+    const FALLBACK = 'https://raw.githubusercontent.com/Calvin99Cooler/files/main';
 
-  let t;
-  searchInput.addEventListener('input', e => {
-    clearTimeout(t);
-    t = setTimeout(() => {
-      const term = e.target.value.trim().toLowerCase();
-      render(term ? zones.filter(z => z.name.toLowerCase().includes(term)) : zones);
-    }, 200);
-  });
+    const grid  = cnt.querySelector('#bzg-grid');
+    const input = cnt.querySelector('#bzg-search');
+    const empty = cnt.querySelector('#bzg-empty');
+
+    const zones = await fetch(JSON_URL)
+      .then(r => r.json())
+      .then(list => list.map(z => ({
+        name: z.name,
+        cover: z.cover ?
+          (z.cover.includes('{COVER_URL}') ? z.cover.replace('{COVER_URL}', COVER_URL) :
+           z.cover.startsWith('http') ? z.cover :
+           `${FALLBACK}/${encodeURIComponent(z.name.trim())}/${z.cover}`) + `?t=${ts()}` : '',
+        url: `${HTML_URL}${encodeURIComponent(z.name)}.html?t=${ts()}`
+      })))
+      .catch(() => []);
+
+    const makeCard = z => {
+      const card = document.createElement('div');
+      card.className = 'bzg-card';
+      card.innerHTML = `
+        <img class="bzg-img" alt="${z.name}"
+             src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw=="
+             data-src="${z.cover}">
+        <div class="bzg-info"><div class="bzg-name">${z.name}</div></div>`;
+      card.onclick = () =>
+        fetch(z.url).then(r => r.text())
+          .then(html => {
+            const t = window.open('about:blank', '_blank');
+            t.document.write(html); t.document.close();
+          })
+          .catch(() => alert('Could not load game'));
+      return card;
+    };
+
+    const render = arr => {
+      grid.innerHTML = '';
+      if (!arr.length) { empty.style.display = 'block'; return; }
+      empty.style.display = 'none';
+      arr.forEach(z => grid.appendChild(makeCard(z)));
+      /* lazy images */
+      const imgs = grid.querySelectorAll('img[data-src]');
+      if ('IntersectionObserver' in window) {
+        const io = new IntersectionObserver((es, o) => es.forEach(e => {
+          if (e.isIntersecting) {
+            const i = e.target; i.src = i.dataset.src; delete i.dataset.src; o.unobserve(i);
+          }
+        }));
+        imgs.forEach(i => io.observe(i));
+      } else imgs.forEach(i => i.src = i.dataset.src);
+    };
+
+    render(zones);
+    let t; input.oninput = e => {
+      clearTimeout(t);
+      t = setTimeout(() => {
+        const term = e.target.value.trim().toLowerCase();
+        render(term ? zones.filter(z => z.name.toLowerCase().includes(term)) : zones);
+      }, 200);
+    };
+  })();
 })();
 </script>
-
-</body>
-</html>
